Corrected bug with missing occupants in components (which affected link data generation).

--- a/05_export.ipynb
+++ b/05_export.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "prime-sapphire",
+   "id": "alpha-wayne",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "artistic-given",
+   "id": "modular-lyric",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "engaged-promise",
+   "id": "rolled-tamil",
    "metadata": {},
    "source": [
     "# Graph module\n",
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "religious-prairie",
+   "id": "attached-partition",
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "constitutional-amateur",
+   "id": "through-glossary",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "deluxe-thinking",
+   "id": "bottom-disorder",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "decimal-telephone",
+   "id": "political-acceptance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "excited-friday",
+   "id": "amino-farmer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,6 +244,7 @@
     "        forceBreak = False\n",
     "\n",
     "        for nodeIdx in range(1,numNodes+1):\n",
+    "            \n",
     "            if debug:    \n",
     "                print(f'Processing node {nodeIdx:0{numNodesDigits}}/{numNodes:0{numNodesDigits}}')\n",
     "            else:\n",
@@ -258,8 +259,9 @@
     "            pathStart = False\n",
     "            pathEnd = False\n",
     "            breakCompBeforeBin = False\n",
+    "            nodeOccupants = set()\n",
     "            for j,pathID in enumerate(uniqueNodePathsIDx):\n",
-    "                occupants.add(pathID)\n",
+    "                nodeOccupants.add(pathID)\n",
     "\n",
     "                pOcc = occupancy.setdefault(pathID,0) \n",
     "                pOcc += pathNodeCount[j]*nodeLengths[nodeIdx-1]\n",
@@ -328,6 +330,8 @@
     "                breakComponent = False\n",
     "                forceBreak = False\n",
     "                breakCompBeforeBin = False\n",
+    "            \n",
+    "            occupants |= nodeOccupants\n",
     "            \n",
     "            nodeToComponent.append([len(components)])\n",
     "            nodesInComp.add(nodeIdx)\n",
@@ -581,7 +585,7 @@
     "\n",
     "                                nodeFromLink.setdefault(nextNode,[]).append(pathID)\n",
     "                                toLinks.setdefault(nextNode,{}).setdefault(nodeIdx,[]).append(pathID)\n",
-    "                                if (nBins>0 or binOpen) and (nodeInversionInPath<=0.5):\n",
+    "                                if (nBins>0 or binOpen) and (nodeInversionInPath<=invertionThreshold):\n",
     "\n",
     "                                    if debug:\n",
     "                                        print(f'Node {nodeIdx}: Component will be broken after node {nodeIdx} due to backward link to node {nextNode}.')\n",
@@ -594,7 +598,7 @@
     "\n",
     "                                    nodeFromLink.setdefault(nextNode,[]).append(pathID)\n",
     "                                    toLinks.setdefault(nextNode,{}).setdefault(nodeIdx,[]).append(pathID)\n",
-    "                                    if (nBins>0 or binOpen) and (nodeInversionInPath<=0.5): \n",
+    "                                    if (nBins>0 or binOpen) and (nodeInversionInPath<=invertionThreshold): \n",
     "\n",
     "                                        if debug:\n",
     "                                            print(f'Node {nodeIdx}: Component will be broken after node {nodeIdx} due forward jumping link to node {nextNode}.')\n",
@@ -783,13 +787,13 @@
     "        json.dump(rootStruct,f,cls=NpEncoder)\n",
     "    \n",
     "    if returnDebugData:\n",
-    "        return zoomComponentLengths,zoomNodeToComponent,zoomComponentToNodes,zoomComponents,zoomCompNucleotides"
+    "        return zoomComponentLengths,zoomNodeToComponent,zoomComponentToNodes,zoomComponents,zoomCompNucleotides,toLinks,fromLinks,graph"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "strange-dividend",
+   "id": "occasional-rogers",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -807,7 +811,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "continent-unemployment",
+   "id": "coupled-spending",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -826,7 +830,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "raised-treasury",
+   "id": "random-print",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -900,7 +904,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "peaceful-montgomery",
+   "id": "reflected-thirty",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -926,7 +930,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "harmful-chinese",
+   "id": "dynamic-muscle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -960,7 +964,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "hidden-officer",
+   "id": "joint-student",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1007,7 +1011,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "robust-rendering",
+   "id": "systematic-terrain",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1023,7 +1027,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "impressed-finnish",
+   "id": "democratic-hello",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1050,7 +1054,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "appointed-terrorist",
+   "id": "creative-entertainment",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1141,7 +1145,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "transparent-representative",
+   "id": "musical-priority",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1180,7 +1184,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "checked-consultation",
+   "id": "excessive-manhattan",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1245,7 +1249,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "flying-darwin",
+   "id": "clear-keeping",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1276,7 +1280,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "split-ranking",
+   "id": "removable-lesbian",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1290,7 +1294,6 @@
     "#         pdb.set_trace()\n",
     "    \n",
     "    for node in nodeInComp:\n",
-    "        \n",
     "        # Processing all external arrival links\n",
     "        nodeToLink = toLinks.get(node,{})\n",
     "        for fromNode in nodeToLink.keys():\n",
