--- a/index.ipynb
+++ b/index.ipynb
@@ -31055,7 +31055,7 @@
       "Processing node 214/214\n",
       "Nodes processed, recording component to files.\n",
       "Processing component 33/33\n",
-      "Recording finished. Zoom level time is 4.656890869140625. Time elapsed 4.706388235092163\n",
+      "Recording finished. Zoom level time is 4.8328282833099365. Time elapsed 4.889366388320923\n",
       "\n",
       "===========================\n",
       "Zoom level 4\n",
@@ -31063,7 +31063,7 @@
       "Processing node 214/214\n",
       "Nodes processed, recording component to files.\n",
       "Processing component 31/31\n",
-      "Recording finished. Zoom level time is 1.3148412704467773. Time elapsed 6.021283149719238\n",
+      "Recording finished. Zoom level time is 1.329538106918335. Time elapsed 6.21943736076355\n",
       "\n",
       "===========================\n",
       "Zoom level 8\n",
@@ -31071,7 +31071,7 @@
       "Processing node 214/214\n",
       "Nodes processed, recording component to files.\n",
       "Processing component 28/28\n",
-      "Recording finished. Zoom level time is 1.0099267959594727. Time elapsed 7.0316691398620605\n",
+      "Recording finished. Zoom level time is 1.0318922996520996. Time elapsed 7.251372337341309\n",
       "\n",
       "===========================\n",
       "Zoom level 16\n",
@@ -31079,12 +31079,12 @@
       "Processing node 214/214\n",
       "Nodes processed, recording component to files.\n",
       "Processing component 24/24\n",
-      "Recording finished. Zoom level time is 0.858971357345581. Time elapsed 7.890682697296143\n"
+      "Recording finished. Zoom level time is 0.8715581893920898. Time elapsed 8.122971057891846\n"
      ]
     }
    ],
    "source": [
-    "# zoomComponentLengths,zoomNodeToComponent,zoomComponentToNodes,zoomComponents,zoomCompNucleotides = \\\n",
+    "# zoomComponentLengths,zoomNodeToComponent,zoomComponentToNodes,zoomComponents,zoomCompNucleotides,toLinks,fromLinks,graph = \\\n",
     "exportToPantograph(inputPath=inputPath,\n",
     "                   outputName=outputName,\n",
     "                   outputPath=outputPath,\n",
@@ -31093,53 +31093,10 @@
     "                   zoomLevels=zoomLevels,\n",
     "                   maxLengthChunk=maxLengthChunk,\n",
     "                   maxLengthComponent=maxLengthComponent,\n",
+    "                   \n",
+    "                   \n",
     "                   invertionThreshold=invertionThreshold,)\n",
-    "#                                              debug=True,returnDebugData=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "> \u001b[0;32m/data/YandexDisk/Kew/src/graphConstruction/pangraph_constructor/export.py\u001b[0m(858)\u001b[0;36mfinaliseBin\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32m    856 \u001b[0;31m\u001b[0;31m#         print(f'[finaliseBin] joined pos {newPos}')\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0m\u001b[0;32m    857 \u001b[0;31m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0m\u001b[0;32m--> 858 \u001b[0;31m        \u001b[0minversionRate\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minversion\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mpathID\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mbinLength\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0m\u001b[0;32m    859 \u001b[0;31m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0m\u001b[0;32m    860 \u001b[0;31m        \u001b[0mmatrixPathRecord\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "ipdb>  inversion\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{0: 0.0}\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "ipdb>  q\n"
-     ]
-    }
-   ],
-   "source": [
-    "import pdb\n",
-    "pdb.pm()"
+    "#                    debug=True,returnDebugData=True)"
    ]
   },
   {
