Added capability to introduce annotation to graph (using complementary file for GFA file) and exporting annotation to pantograph data structure and to Redis database for search capabilities; Modified pre-treatment of inversions; Added capability to remove overlaps in the graph.

--- a/00_init.ipynb
+++ b/00_init.ipynb
@@ -28,7 +28,12 @@
      "output_type": "stream",
      "text": [
       "Converted 00_init.ipynb.\n",
-      "Converted 01_synteny.ipynb.\n",
+      "Converted 01_graph.ipynb.\n",
+      "Converted 02_tree.ipynb.\n",
+      "Converted 03_synteny.ipynb.\n",
+      "Converted 04_utils.ipynb.\n",
+      "Converted 05_export.ipynb.\n",
+      "Converted deBruijnGraphProcessing.ipynb.\n",
       "Converted index.ipynb.\n"
      ]
     }
@@ -46,9 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#exporti\n",
-    "\n",
-    "from pangraph_constructor.synteny import *"
+    "# from pangraph_constructor.synteny import *"
    ]
   }
  ],
