--- a/05_export.ipynb
+++ b/05_export.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "alpha-wayne",
+   "id": "married-letters",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "modular-lyric",
+   "id": "previous-instrumentation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,18 +24,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "rolled-tamil",
+   "id": "working-original",
    "metadata": {},
    "source": [
-    "# Graph module\n",
+    "# Export module\n",
     "\n",
-    "> Provides main class and helpers classes and functions to handle pangenome graph and related data structures"
+    "> Provides functionality to export graph to Pantograph data storage."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "attached-partition",
+   "id": "productive-organization",
    "metadata": {},
    "outputs": [
     {
@@ -48,6 +48,7 @@
       "Converted 03_synteny.ipynb.\n",
       "Converted 04_utils.ipynb.\n",
       "Converted 05_export.ipynb.\n",
+      "Converted deBruijnGraphProcessing.ipynb.\n",
       "Converted index.ipynb.\n"
      ]
     }
@@ -62,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "through-glossary",
+   "id": "worst-possible",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,14 +85,17 @@
     "# import pandas as pd\n",
     "import numpy as np\n",
     "\n",
+    "from sortedcontainers import SortedSet\n",
+    "\n",
     "from pangraph_constructor.utils import pathConvert,NpEncoder,adjustZoomLevels\n",
-    "from pangraph_constructor.graph import GenomeGraph"
+    "from pangraph_constructor.utils import iset_add\n",
+    "from pangraph_constructor.graph import GenomeGraph,initialPathAnalysis,calcNodeLengths"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bottom-disorder",
+   "id": "surrounded-aerospace",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "political-acceptance",
+   "id": "critical-missile",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,12 +143,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "amino-farmer",
+   "id": "acoustic-charter",
    "metadata": {},
    "outputs": [],
    "source": [
     "#export\n",
     "def exportToPantograph(graph=None,inputPath=None,GenomeGraphParams={},outputPath=None,outputName=None,outputSuffix=None,isSeq=True,\n",
+    "                       redisConn=None,\n",
     "                       listOfExports=['schematise','genomeToPangenome','annotationToGenome'],\n",
     "                       zoomLevels=[1],maxLengthComponent=100,maxLengthChunk=20,invertionThreshold=0.5,\n",
     "                       debug=False,returnDebugData=False):\n",
@@ -205,7 +210,7 @@
     "        zoom_level_struct = {}\n",
     "        zoom_level_struct[\"files\"] = []\n",
     "        \n",
-    "        \n",
+    "        overallNBins = 0\n",
     "        \n",
     "        if returnDebugData:\n",
     "            nodeToComponent = zoomNodeToComponent.setdefault(zoomLevel,[])\n",
@@ -214,11 +219,11 @@
     "            components = zoomComponents.setdefault(zoomLevel,[])\n",
     "            componentNucleotides = zoomCompNucleotides.setdefault(zoomLevel,[])\n",
     "        else:\n",
-    "            nodeToComponent = [] #zoomNodeToComponent.setdefault(zoomLevel,[])\n",
-    "            componentToNode = [] #zoomComponentToNodes.setdefault(zoomLevel,[])\n",
-    "            componentLengths = [] #zoomComponentLengths.setdefault(zoomLevel,[])\n",
-    "            components = [] #zoomComponents.setdefault(zoomLevel,[])\n",
-    "            componentNucleotides = [] #zoomCompNucleotides.setdefault(zoomLevel,[])\n",
+    "            nodeToComponent = []\n",
+    "            componentToNode = []\n",
+    "            componentLengths = []\n",
+    "            components = []\n",
+    "            componentNucleotides = []\n",
     "        \n",
     "        component = deepcopy(componentTemplate)\n",
     "\n",
@@ -237,6 +242,7 @@
     "        inversion = {}\n",
     "        pos = {}\n",
     "        nodesInComp = set()\n",
+    "        annotationNames = {}\n",
     "        breakComponentWhenBinEnds = False\n",
     "        breakCompBeforeBin = False\n",
     "        binOpen = False\n",
@@ -389,14 +395,28 @@
     "                        binLength = zoomLevel\n",
     "\n",
     "                    for j,pathID in enumerate(uniqueNodePathsIDx):\n",
+    "#                         if i==3:\n",
+    "#                             pdb.set_trace()\n",
+    "#                         print(f'[Export] identified annotations for path {graph.accessions[pathID]} is {[k for k,v in graph.nodesAnnotation[nodeIdx-1][graph.accessions[pathID]].items() \\\n",
+    "#                                     for interval in v \\\n",
+    "#                                     if (interval[1]-i)*(i+zoomLevel-1-interval[0])>=0]}')\n",
+    "                        annotationNames.setdefault(graph.accessions[pathID],SortedSet()).\\\n",
+    "                            update([k for k,v in graph.nodesAnnotation[nodeIdx-1][graph.accessions[pathID]].items() \\\n",
+    "                                    for interval in v \\\n",
+    "                                    if (interval[1]-i)*(i+zoomLevel-1-interval[0])>=0])\n",
     "                        posPath = pos.setdefault(pathID,[])\n",
     "                        for nodeNumInPath in nodeSeqInPath[np.where(nodePathsIdx==pathID)[0]]:\n",
     "                            offset = np.min([i+zoomLevel,nodeLen])\n",
     "                            nodeStart = pathNodeLengthsCum[pathID,nodeNumInPath]-nodeLen+1\n",
     "                            posPath.append([nodeStart+i,nodeStart+offset-1])\n",
-    "\n",
-    "                    matrix,pos,binLength,_,_,nBins,nCols,binOpen = \\\n",
-    "                        finaliseBin(matrix,pos,binLength,nodeLengths[nodeIdx-1],occupancy,inversion,nBins,nCols,posInd)\n",
+    "                    \n",
+    "                    matrix,pos,binLength,_,_,nBins,annotationNames,nCols,overallNBins,binOpen = \\\n",
+    "                        finaliseBin(matrix,pos,binLength,\n",
+    "                                    nodeLengths[nodeIdx-1],\n",
+    "                                    occupancy,inversion,\n",
+    "                                    nBins,nCols,posInd,\n",
+    "                                    redisConn,zoomLevel,overallNBins,annotationNames,\n",
+    "                                    graph.accessions)\n",
     "\n",
     "                    if nBins+1>maxLengthComponent and (i+zoomLevel<nodeLen) and len(matrix)>0:\n",
     "                        # Because this is intra-node break, all connectors will be handled by rdepartures without separating into inverted or non-inverted. \n",
@@ -490,18 +510,34 @@
     "#                     breakCompBeforeBin = False\n",
     "#                     breakComponent = False\n",
     "#                     forceBreak = False\n",
-    "                \n",
+    "#                 if zoomLevel==32:            \n",
+    "#                     pdb.set_trace()\n",
     "                for j,pathID in enumerate(uniqueNodePathsIDx):\n",
+    "                    annotationNames.setdefault(graph.accessions[pathID],SortedSet()).\\\n",
+    "                        update(list(graph.nodesAnnotation[nodeIdx-1][graph.accessions[pathID]].keys()))\n",
+    "                        \n",
     "                    posPath = pos.setdefault(pathID,[])\n",
     "                    for nodeNumInPath in nodeSeqInPath[np.where(nodePathsIdx==pathID)[0]]:\n",
     "                        nodeStart = pathNodeLengthsCum[pathID,nodeNumInPath]-nodeLen+1\n",
     "                        posPath.append([nodeStart,nodeStart+nodeLen-1])\n",
-    "\n",
+    "            \n",
     "                if nodeIdx<len(graph.nodes):\n",
     "                    if binLength+nodeLengths[nodeIdx]>zoomLevel:\n",
-    "                        matrix,pos,binLength,occupancy,inversion,nBins,nCols,binOpen = finaliseBin(matrix,pos,binLength,binLength,occupancy,inversion,nBins,nCols,0)\n",
+    "                        matrix,pos,binLength,occupancy,inversion,nBins,annotationNames,nCols,overallNBins,binOpen = \\\n",
+    "                        finaliseBin(matrix,pos,binLength,\n",
+    "                                    binLength,\n",
+    "                                    occupancy,inversion,\n",
+    "                                    nBins,nCols,0,\n",
+    "                                    redisConn,zoomLevel,overallNBins,annotationNames,\n",
+    "                                    graph.accessions)\n",
     "                else:\n",
-    "                    matrix,pos,binLength,occupancy,inversion,nBins,nCols,binOpen = finaliseBin(matrix,pos,binLength,binLength,occupancy,inversion,nBins,nCols,0)\n",
+    "                    matrix,pos,binLength,occupancy,inversion,nBins,annotationNames,nCols,overallNBins,binOpen = \\\n",
+    "                    finaliseBin(matrix,pos,binLength,\n",
+    "                                binLength,\n",
+    "                                occupancy,inversion,\n",
+    "                                nBins,nCols,0,\n",
+    "                                redisConn,zoomLevel,overallNBins,annotationNames,\n",
+    "                                graph.accessions)\n",
     "\n",
     "            # marking path ends and breaking component if any exist\n",
     "            pathEnds = np.sort(np.unique([pathIdx for pathIdx,nodeInSeq in zip(nodePathsIdx,nodeSeqInPath) if pathLengths[pathIdx]==nodeInSeq+1]))\n",
@@ -793,7 +829,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "occasional-rogers",
+   "id": "cardiac-protest",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -811,7 +847,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "coupled-spending",
+   "id": "hired-chart",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -830,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "random-print",
+   "id": "armed-asbestos",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -904,72 +940,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "reflected-thirty",
+   "id": "personal-diploma",
    "metadata": {},
    "outputs": [],
    "source": [
     "#export\n",
-    "def calcNodeLengths(graph):\n",
-    "    print('Calculating nodes length...')\n",
-    "    \n",
-    "    numNodes = len(graph.nodes)\n",
-    "    numNodesDigits = np.int(np.ceil(np.log10(numNodes)))\n",
-    "    nodeLengths = [0]*numNodes\n",
-    "    \n",
-    "    for nodeIdx in range(numNodes):\n",
-    "        print(f'\\rProcessing node {nodeIdx+1:0{numNodesDigits}}/{numNodes:0{numNodesDigits}}',end='')\n",
-    "        if graph.nodesData[nodeIdx]=='':\n",
-    "            nodeLengths[nodeIdx] = len(graph.nodes[nodeIdx])\n",
-    "        else:\n",
-    "            nodeLengths[nodeIdx] = len(graph.nodesData[nodeIdx])\n",
-    "    \n",
-    "    print('\\nFinished calculating nodes lengths')\n",
-    "    return nodeLengths"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dynamic-muscle",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#export\n",
-    "def initialPathAnalysis(graph,nodeLengths):\n",
-    "    print('Preprocessing paths...')\n",
-    "    \n",
-    "    numPaths = len(graph.paths)\n",
-    "    numPathsZeros = np.int(np.ceil(np.log10(numPaths)))\n",
-    "    \n",
-    "    maxLengthPath = len(max(graph.paths,key=lambda arr: len(arr)))\n",
-    "\n",
-    "    pathLengths = []\n",
-    "    pathNodeArray = np.zeros((len(graph.paths),maxLengthPath),dtype = np.int)\n",
-    "    pathNodeLengths = np.zeros((len(graph.paths),maxLengthPath),dtype = np.int)\n",
-    "    pathDirArray = np.zeros((len(graph.paths),maxLengthPath),dtype = np.bool) # True - \"+\", False - \"-\" or padding for shorter paths.\n",
-    "\n",
-    "    for i,path in enumerate(graph.paths):\n",
-    "        print(f'\\rProcessing path {i+1:0{numPathsZeros}}/{numPaths:0{numPathsZeros}}',end='')\n",
-    "        pathLengths.append(len(path))\n",
-    "\n",
-    "        pathNodeArray[i,:pathLengths[-1]] = [int(node[:-1]) for node in path]\n",
-    "        pathDirArray[i,:pathLengths[-1]] = [node[-1]=='-' for node in path]\n",
-    "        pathNodeLengths[i,:pathLengths[-1]] = [nodeLengths[node-1] for node in pathNodeArray[i,:pathLengths[-1]]]\n",
-    "\n",
-    "    pathNodeLengthsCum = np.cumsum(pathNodeLengths,axis=1)\n",
-    "    print('\\nFinished preprocessing paths')\n",
-    "    return pathLengths,pathNodeArray,pathNodeLengths,pathDirArray,pathNodeLengthsCum"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "joint-student",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#export\n",
-    "def finaliseBin(matrix,pos,binLength,occInvAdj,occupancy,inversion,nBins,nCols,posInd):\n",
+    "def finaliseBin(matrix,pos,binLength,occInvAdj,occupancy,inversion,nBins,nCols,posInd,redisConn,zoomLevel,overallNBins,annotationNames,accessions):\n",
     "    for pathID in pos.keys():\n",
     "        matrixPath = matrix.setdefault(pathID,[[],[]])\n",
     "        posPath = pos.get(pathID)\n",
@@ -991,11 +967,17 @@
     "            \n",
     "        newPos[-1].append(np.max(candidates))# !!!!        \n",
     "        \n",
-    "#         print(f'[finaliseBin] joined pos {newPos}')\n",
+    "        posMapping = {int(overallNBins+1):(int(posStart),int(posEnd)) for posStart,posEnd in newPos}\n",
+    "        iset_add(redisConn, f'{zoomLevel}.{accessions[pathID]}.Pos',posMapping)\n",
+    "        \n",
+    "        geneList = annotationNames[accessions[pathID]]\n",
+    "        if len(geneList)>0:\n",
+    "            geneMapping = {gene:int(overallNBins+1) for gene in geneList}\n",
+    "            redisConn.hmset( f'{zoomLevel}.{accessions[pathID]}.Gene',geneMapping)\n",
     "        \n",
     "        inversionRate = inversion[pathID]/occInvAdj\n",
-    "    \n",
-    "        matrixPathRecord = [0,0,[]]\n",
+    "#         pdb.set_trace()\n",
+    "        matrixPathRecord = [0,0,[],list(annotationNames[accessions[pathID]])[::-1]]\n",
     "        matrixPath[0].append(nBins)\n",
     "        matrixPathRecord[0] = occupancy[pathID]/occInvAdj # Occupancy\n",
     "        matrixPathRecord[1] = inversionRate # Inversion rate\n",
@@ -1005,13 +987,13 @@
     "        else:\n",
     "            matrixPath[1].append(matrixPathRecord)\n",
     "        \n",
-    "    return matrix,{},0,{},{},nBins+1,nCols+binLength,False #matrix,pos,binLength,occupancy,inversion,nBins,nCols,binOpen"
+    "    return matrix,{},0,{},{},nBins+1,{},nCols+binLength,overallNBins+1,False #matrix,pos,binLength,occupancy,inversion,nBins,annotationNames,nCols,overallNBins,binOpen"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "systematic-terrain",
+   "id": "round-knock",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1027,7 +1009,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "democratic-hello",
+   "id": "progressive-warrant",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1054,7 +1036,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "creative-entertainment",
+   "id": "surface-tourist",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1145,7 +1127,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "musical-priority",
+   "id": "recreational-sapphire",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1184,7 +1166,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "excessive-manhattan",
+   "id": "italian-pendant",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1249,7 +1231,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "clear-keeping",
+   "id": "superb-links",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1280,7 +1262,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "removable-lesbian",
+   "id": "specific-college",
    "metadata": {},
    "outputs": [],
    "source": [
