Corrected error with order of annotation genes; Corrected error with not indicating ends.

--- a/05_export.ipynb
+++ b/05_export.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "married-letters",
+   "id": "sunset-solid",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "previous-instrumentation",
+   "id": "hairy-armor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "working-original",
+   "id": "earlier-uncertainty",
    "metadata": {},
    "source": [
     "# Export module\n",
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "productive-organization",
+   "id": "responsible-friendship",
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "worst-possible",
+   "id": "subsequent-check",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "surrounded-aerospace",
+   "id": "latest-syntax",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "critical-missile",
+   "id": "visible-mediterranean",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "acoustic-charter",
+   "id": "based-rubber",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,10 +400,10 @@
     "#                         print(f'[Export] identified annotations for path {graph.accessions[pathID]} is {[k for k,v in graph.nodesAnnotation[nodeIdx-1][graph.accessions[pathID]].items() \\\n",
     "#                                     for interval in v \\\n",
     "#                                     if (interval[1]-i)*(i+zoomLevel-1-interval[0])>=0]}')\n",
-    "                        annotationNames.setdefault(graph.accessions[pathID],SortedSet()).\\\n",
-    "                            update([k for k,v in graph.nodesAnnotation[nodeIdx-1][graph.accessions[pathID]].items() \\\n",
+    "                        annotationNames.setdefault(graph.accessions[pathID],{}).\\\n",
+    "                            update({k:None for k,v in graph.nodesAnnotation[nodeIdx-1][graph.accessions[pathID]].items() \\\n",
     "                                    for interval in v \\\n",
-    "                                    if (interval[1]-i)*(i+zoomLevel-1-interval[0])>=0])\n",
+    "                                    if (interval[1]-i)*(i+zoomLevel-1-interval[0])>=0})\n",
     "                        posPath = pos.setdefault(pathID,[])\n",
     "                        for nodeNumInPath in nodeSeqInPath[np.where(nodePathsIdx==pathID)[0]]:\n",
     "                            offset = np.min([i+zoomLevel,nodeLen])\n",
@@ -513,8 +513,8 @@
     "#                 if zoomLevel==32:            \n",
     "#                     pdb.set_trace()\n",
     "                for j,pathID in enumerate(uniqueNodePathsIDx):\n",
-    "                    annotationNames.setdefault(graph.accessions[pathID],SortedSet()).\\\n",
-    "                        update(list(graph.nodesAnnotation[nodeIdx-1][graph.accessions[pathID]].keys()))\n",
+    "                    annotationNames.setdefault(graph.accessions[pathID],{}).\\\n",
+    "                        update(graph.nodesAnnotation[nodeIdx-1][graph.accessions[pathID]])\n",
     "                        \n",
     "                    posPath = pos.setdefault(pathID,[])\n",
     "                    for nodeNumInPath in nodeSeqInPath[np.where(nodePathsIdx==pathID)[0]]:\n",
@@ -829,7 +829,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cardiac-protest",
+   "id": "entertaining-centre",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -847,7 +847,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "hired-chart",
+   "id": "crude-addiction",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -866,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "armed-asbestos",
+   "id": "thick-cycling",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -933,6 +933,9 @@
     "    newComp['ldepartures'] = leftComp['ldepartures']\n",
     "    newComp['rarrivals'] = rightComp['rarrivals']\n",
     "    newComp['rdepartures'] = rightComp['rdepartures']\n",
+    "    ends = list(set(leftComp.get('ends',[])).union(rightComp.get('ends',[])))\n",
+    "    if len(ends)>0:\n",
+    "        newComp['ends'] = ends\n",
     "    \n",
     "    return newComp"
    ]
@@ -940,7 +943,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "personal-diploma",
+   "id": "hybrid-small",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -977,7 +980,7 @@
     "        \n",
     "        inversionRate = inversion[pathID]/occInvAdj\n",
     "#         pdb.set_trace()\n",
-    "        matrixPathRecord = [0,0,[],list(annotationNames[accessions[pathID]])[::-1]]\n",
+    "        matrixPathRecord = [0,0,[],list(annotationNames[accessions[pathID]].keys())]\n",
     "        matrixPath[0].append(nBins)\n",
     "        matrixPathRecord[0] = occupancy[pathID]/occInvAdj # Occupancy\n",
     "        matrixPathRecord[1] = inversionRate # Inversion rate\n",
@@ -993,7 +996,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "round-knock",
+   "id": "constant-trauma",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1009,7 +1012,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "progressive-warrant",
+   "id": "acquired-glenn",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1036,7 +1039,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "surface-tourist",
+   "id": "limited-animal",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1127,7 +1130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "recreational-sapphire",
+   "id": "color-playback",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1166,7 +1169,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "italian-pendant",
+   "id": "smoking-antarctica",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1231,7 +1234,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "superb-links",
+   "id": "eight-hopkins",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1262,7 +1265,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "specific-college",
+   "id": "significant-maker",
    "metadata": {},
    "outputs": [],
    "source": [
